# Mission_Impossibowel

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  MIGRATION.md  MIGRATION_0.6.0.md  README.md  RELEASE.md  deny.toml  index.html  print.html  searcher-c2a407aa.js  searchindex-3c97998c.js
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  mdbook.yml
00_workspace/: build_and_run.html  canonical_flows.html  changelog.html  dev_loop.html  docsrs_alignment.html  feature_flags.html  glossary.html  index.html  integration_contracts.html  linking_style.html  maintenance_routine.html  open_questions.html  overview.html  quality_gates.html  readers_guide.html  reproducibility.html  shared_dep_themes.html  style_guide.html  workspace_metadata.html
10_crates/: deep_dives.html  index.html
10_crates/burn_dataset/: 01_overview.html  02_public_api.html  03_lifecycle.html  04_module_map.html  05_traits_and_generics.html  06_error_model.html  07_ownership_and_concurrency.html  08_performance_notes.html  09_examples.html  10_design_review.html  index.html
10_crates/capture_utils/: 01_overview.html  02_public_api.html  03_lifecycle.html  04_module_map.html  05_traits_and_generics.html  06_error_model.html  07_ownership_and_concurrency.html  08_performance_notes.html  09_examples.html  10_design_review.html  index.html
10_crates/cli_support/: 01_overview.html  02_public_api.html  03_lifecycle.html  04_module_map.html  05_traits_and_generics.html  06_error_model.html  07_ownership_and_concurrency.html  08_performance_notes.html  09_examples.html  10_design_review.html  index.html
10_crates/cortenforge/: 01_overview.html  02_public_api.html  03_lifecycle.html  04_module_map.html  05_traits_and_generics.html  06_error_model.html  07_ownership_and_concurrency.html  08_performance_notes.html  09_examples.html  10_design_review.html  index.html
10_crates/cortenforge_tools/: 01_overview.html  02_public_api.html  03_lifecycle.html  04_module_map.html  05_traits_and_generics.html  06_error_model.html  07_ownership_and_concurrency.html  08_performance_notes.html  09_examples.html  10_design_review.html  index.html
10_crates/data_contracts/: 01_overview.html  02_public_api.html  03_lifecycle.html  04_module_map.html  05_traits_and_generics.html  06_error_model.html  07_ownership_and_concurrency.html  08_performance_notes.html  09_examples.html  10_design_review.html  index.html
10_crates/inference/: 01_overview.html  02_public_api.html  03_lifecycle.html  04_module_map.html  05_traits_and_generics.html  06_error_model.html  07_ownership_and_concurrency.html  08_performance_notes.html  09_examples.html  10_design_review.html  index.html
10_crates/models/: 01_overview.html  02_public_api.html  03_lifecycle.html  04_module_map.html  05_traits_and_generics.html  06_error_model.html  07_ownership_and_concurrency.html  08_performance_notes.html  09_examples.html  10_design_review.html  index.html
10_crates/sim_core/: 01_overview.html  02_public_api.html  03_lifecycle.html  04_module_map.html  05_traits_and_generics.html  06_error_model.html  07_ownership_and_concurrency.html  08_performance_notes.html  09_examples.html  10_design_review.html  index.html
10_crates/training/: 01_overview.html  02_public_api.html  03_lifecycle.html  04_module_map.html  05_traits_and_generics.html  06_error_model.html  07_ownership_and_concurrency.html  08_performance_notes.html  09_examples.html  10_design_review.html  index.html
10_crates/vision_core/: 01_overview.html  02_public_api.html  03_lifecycle.html  04_module_map.html  05_traits_and_generics.html  06_error_model.html  07_ownership_and_concurrency.html  08_performance_notes.html  09_examples.html  10_design_review.html  index.html
10_crates/vision_runtime/: 01_overview.html  02_public_api.html  03_lifecycle.html  04_module_map.html  05_traits_and_generics.html  06_error_model.html  07_ownership_and_concurrency.html  08_performance_notes.html  09_examples.html  10_design_review.html  index.html
20_building_apps/: 01_story_setup.html  02_app_stack.html  03_sim_core.html  04_vision_runtime.html  05_recorder.html  06_dataset.html  07_training.html  08_inference.html  09_tools_ops.html  10_epilogue.html  index.html
30_reference/: index.html
capture_utils/: Cargo.toml
capture_utils/src/: lib.rs
crates/burn_dataset/: Cargo.toml  README.md
crates/capture_utils/: Cargo.toml
crates/cli_support/: Cargo.toml  README.md
crates/cortenforge/: Cargo.toml
crates/data_contracts/: Cargo.toml
crates/inference/: Cargo.toml
crates/inference/src/: factory.rs  lib.rs
crates/models/: Cargo.toml
crates/sim_core/: Cargo.toml
crates/sim_core/src/: camera.rs  lib.rs  recorder.rs
crates/training/: Cargo.toml  README.md
crates/training/src/: dataset.rs  lib.rs  util.rs
crates/training/tests/: dataset_load.rs  forward_bigdet.rs  forward_shapes_bigdet.rs  smoke_bigdet.rs  warehouse_manifest_smoke.rs
crates/vision_core/: Cargo.toml
crates/vision_runtime/: Cargo.toml
data_contracts/: Cargo.toml  README.md
data_contracts/src/: lib.rs
docs/: README.md  dependency_analysis.md  test_baseline.md  training.md  weak_points.md  workspace_deps_summary.txt
docs/book/: SUMMARY.md
docs/contributor_book/: book.toml
docs/dissection_book/: book.toml
docs/src/: SUMMARY.md  burn_dataset.md  cli.md  etl_cache.md  streaming_shards.md  tensor_warehouse.md  training.md
inference/: Cargo.toml  README.md
inference/src/: factory.rs  (+1 more)
models/: Cargo.toml
scripts/: sync_versions.sh
sim_core/: Cargo.toml
src/: autopilot.rs  balloon_control.rs  burn_model.rs  cli.rs  controls.rs  hud.rs  lib.rs  main.rs  polyp.rs  probe.rs  tunnel.rs  vision.rs
tests/: hud_overlay.rs  train_harness.rs  vision_inference.rs
tools/: Cargo.toml  README.md  book_tasks.sh  extract_for_book.sh
tools/src/: lib.rs  overlay.rs  services.rs
tools/src/warehouse_commands/: mod.rs
tools/tests/: warehouse_commands_builder.rs
tools/warehouse_commands/: lib.rs  ps.rs  sh.rs
training/: Cargo.toml  README.md
vision_core/: Cargo.toml
vision_runtime/: Cargo.toml
(+274 files in other folders)
