[workspace]
members = [
    "crates/cli_support",
    "crates/cortenforge",
    "crates/burn_dataset",
    "tools",
    "capture_utils",
    "sim_core",
    "vision_core",
    "vision_runtime",
    "data_contracts",
    "training",
    "inference",
    "models",
]
resolver = "2"

[patch.crates-io]
burn-core = { path = "vendor/burn-core-0.14.0" }
