[workspace]
members = [
    "crates/cli_support",
    "crates/cortenforge",
    "crates/burn_dataset",
    "tools",
    "capture_utils",
    "sim_core",
    "vision_core",
    "vision_runtime",
    "data_contracts",
    "training",
    "inference",
    "models",
]
resolver = "2"

[patch.crates-io]
burn-core = { path = "vendor/burn-core-0.14.0" }
cortenforge-models = { path = "models" }
cortenforge-data-contracts = { path = "data_contracts" }
cortenforge-burn-dataset = { path = "crates/burn_dataset" }
cortenforge-cli-support = { path = "crates/cli_support" }
cortenforge-vision-core = { path = "vision_core" }
cortenforge-sim-core = { path = "sim_core" }
cortenforge-capture-utils = { path = "capture_utils" }
cortenforge-vision-runtime = { path = "vision_runtime" }
cortenforge-inference = { path = "inference" }
cortenforge-training = { path = "training" }
cortenforge = { path = "crates/cortenforge" }
