[package]
name = "capture_utils"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
vision_core = { path = "../vision_core" }
data_contracts = { path = "../data_contracts" }
image = { version = "0.24", default-features = false, features = ["png", "rayon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
