[package]
name = "colon_sim_tools"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "colon_sim_tools"
path = "src/lib.rs"

[dependencies]
colon_sim = { path = "..", features = ["scheduler"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.24", default-features = false, features = ["png", "rayon"] }
sysinfo = { version = "0.30", default-features = true, features = ["multithread"] }
rayon = "1.8"
sha2 = "0.10"
arrow-array = "46"
arrow-schema = "46"
arrow-select = "46"
parquet = { version = "46", features = ["arrow"] }
crossterm = { version = "0.27" }
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }

[dev-dependencies]
pretty_assertions = "1.4"
