[features]
default = []
tui = ["crossterm", "ratatui"]
scheduler = ["sysinfo"]
# Optional GPU feature flag to mirror root workspace flag.
gpu_nvidia = ["nvml-wrapper"]

[package]
name = "colon_sim_tools"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
name = "colon_sim_tools"
path = "src/lib.rs"

[dependencies]
cli_support = { package = "cortenforge-cli-support", version = "0.1.0" }
burn_dataset = { package = "cortenforge-burn-dataset", version = "0.1.0", default-features = false }
vision_core = { package = "cortenforge-vision-core", version = "0.1.0" }
data_contracts = { package = "cortenforge-data-contracts", version = "0.1.0" }
inference = { package = "cortenforge-inference", version = "0.1.0" }
capture_utils = { package = "cortenforge-capture-utils", version = "0.1.0" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.24", default-features = false, features = ["png", "rayon"] }
sysinfo = { version = "0.30", optional = true, default-features = true, features = ["multithread"] }
rayon = "1.8"
sha2 = "0.10"
arrow-array = "46"
arrow-schema = "46"
arrow-select = "46"
parquet = { version = "46", features = ["arrow"] }
crossterm = { version = "0.27", optional = true }
ratatui = { version = "0.26", optional = true, default-features = false, features = ["crossterm"] }
thiserror = "1.0"
nvml-wrapper = { version = "0.8", optional = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
pretty_assertions = "1.4"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

[[bin]]
name = "datagen_scheduler"
path = "src/bin/datagen_scheduler.rs"
required-features = ["scheduler"]
