[package]
name = "cortenforge-inference"
version = "0.5.1"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "Detector factory and inference helpers (Burn-backed or heuristic) for the CortenForge stack."
repository = "https://github.com/via-balaena/CortenForge"
homepage = "https://github.com/via-balaena/CortenForge"
documentation = "https://docs.rs/cortenforge-inference"
readme = "README.md"
keywords = ["inference", "burn", "detector", "computer-vision"]
categories = ["science", "computer-vision"]
rust-version = "1.75"

[features]
default = ["backend-ndarray", "linear_detector"]
backend-ndarray = ["burn-ndarray", "burn/ndarray"]
backend-wgpu = ["burn-wgpu", "burn/wgpu"]
linear_detector = ["models/linear_detector"]
convolutional_detector = ["models/convolutional_detector"]

[lib]
name = "inference"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
vision_core = { package = "cortenforge-vision-core", version = "0.5.1" }
sim_core = { package = "cortenforge-sim-core", version = "0.5.1" }
burn = { workspace = true, features = ["autodiff"] }
burn-ndarray = { workspace = true, optional = true }
burn-wgpu = { workspace = true, optional = true}
models = { package = "cortenforge-models", path = "../models", version = "0.5.1" }
data_contracts = { package = "cortenforge-data-contracts", version = "0.5.1" }
bincode = { workspace = true }
