[package]
name = "cortenforge-sim-core"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "Bevy-based simulation runtime primitives (modes, config, plugins) for the CortenForge stack."
repository = "https://github.com/via-balaena/CortenForge"
homepage = "https://github.com/via-balaena/CortenForge"
documentation = "https://docs.rs/cortenforge-sim-core"
readme = "README.md"
keywords = ["bevy", "simulation", "runtime"]
categories = ["game-engines", "simulation", "graphics"]
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "sim_core"

[dependencies]
bevy = { workspace = true, features = ["bevy_core_pipeline", "bevy_render", "bevy_asset", "bevy_pbr", "bevy_winit", "bevy_ui", "bevy_ui_render", "bevy_text", "default_font", "x11"] } # x11 required for winit on Linux CI; bevy_ui_render required for UI to actually render
bevy_rapier3d = { workspace = true, features = ["simd-stable", "debug-render-3d"] }
vision_core = { package = "cortenforge-vision-core", path = "../vision_core", version = "0.6.0" }
